--- a/super-fast-loading/index.html
+++ b/super-fast-loading/index.html
@@ -107,7 +107,7 @@ flexibility(document.documentElement);
 																									<div class="site-header-primary-section-right site-header-section ast-flex ast-grid-right-section">
 										<div class="ast-builder-menu-1 ast-builder-menu ast-flex ast-builder-menu-1-focus-item ast-builder-layout-element site-header-focus-item" data-section="section-hb-menu-1">
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation" aria-label="Site Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border stack-on-mobile">
-<li id="menu-item-664" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-664"><a href="https://doquangtrieu.github.io/mywordpress/elementor-659/" class="menu-link">Elementor #659</a></li>
+<li id="menu-item-664" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-664"><a href="https://doquangtrieu.github.io/mywordpress/" class="menu-link">Elementor #659</a></li>
 <li id="menu-item-652" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-652"><a href="https://doquangtrieu.github.io/mywordpress/homepage/" class="menu-link">Homepage</a></li>
 <li id="menu-item-653" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-653"><a href="https://doquangtrieu.github.io/mywordpress/blog-2/" class="menu-link">blog</a></li>
 <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="https://doquangtrieu.github.io/mywordpress/contact-us/" class="menu-link">Contact Us</a></li>
@@ -165,7 +165,7 @@ flexibility(document.documentElement);
 <li class="page_item page-item-251 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/cart/" class="menu-link">Cart</a></li>
 <li class="page_item page-item-252 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/checkout/" class="menu-link">Checkout</a></li>
 <li class="page_item page-item-615 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/contact-us/" class="menu-link">Contact Us</a></li>
-<li class="page_item page-item-659 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/elementor-659/" class="menu-link">Elementor #659</a></li>
+<li class="page_item page-item-659 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/" class="menu-link">Elementor #659</a></li>
 <li class="page_item page-item-803 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/elementor-803/" class="menu-link">Elementor #803</a></li>
 <li class="page_item page-item-640 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/homepage/" class="menu-link">Homepage</a></li>
 <li class="page_item page-item-648 menu-item"><a href="https://doquangtrieu.github.io/mywordpress/homepage-2/" class="menu-link">Homepage</a></li>
@@ -246,7 +246,7 @@ flexibility(document.documentElement);
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="d6104deb5c"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="56"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="145"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 	<p class="akismet_comment_form_privacy_notice">This site uses Akismet to reduce spam. <a href="https://akismet.com/privacy/" target="_blank" rel="nofollow noopener">Learn how your comment data is processed</a>.</p>
